add missing dependency to latex install action

--- a/.github/actions/install_latex_dependencies/action.yml
+++ b/.github/actions/install_latex_dependencies/action.yml
@@ -7,5 +7,5 @@ runs:
       run: |
         sudo apt update
         sudo apt install -y texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
-        sudo apt install -y texlive-bibtex-extra biber
+        sudo apt install -y texlive-bibtex-extra biber python3-pygments
       shell: bash
